--- a/styles/main.css
+++ b/styles/main.css
@@ -14320,6 +14320,9 @@ body {
   background-color: #000;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
+body.admin-bar .navbar {
+  padding-top: 3.2rem;
+}
 
 h1, .h1,
 h2, .h2,
@@ -14587,6 +14590,14 @@ ul.banner-social-buttons {
   }
 }
 @media (max-width: 767px) {
+  body.admin-bar .navbar {
+    padding-top: 0;
+  }
+
+  .intro {
+    padding: 100px 0 0 0;
+  }
+
   ul.banner-social-buttons li {
     display: block;
     margin-bottom: 20px;
